force-app/main/default/objects/BatchToTriggerFlow_Query__mdt/BatchToTriggerFlow_Query__mdt.object-meta.xml
<CustomObject>
    <description>Almacena las query string que el batch utilizara para obtener los registros sobre los luego switcheara el campo booleando.</description>
    <label>BatchToTriggerFlow_Query</label>
    <pluralLabel>BatchToTriggerFlow_Querys</pluralLabel>
</CustomObject>