force-app/main/default/objects/BatchToTriggerFlow_Query__mdt/fields/Batch_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Batch_Quantity__c</fullName>
    <description>Cantidad de batches que se intentaran ejecutar. Si se deja en blanco, se ejecutaran batches del tamaño seleccionado hasta recorrer todos los registros que cumplan con las condiciones del WHERE.

La cantidad maxima de registros iterados va a ser Batch_Size x Batch_Quantity.</description>
    <inlineHelpText>Cantidad de batches que se intentaran ejecutar. Si se deja en blanco, se ejecutaran batches del tamaño seleccionado hasta recorrer todos los registros que cumplan con las condiciones del WHERE.

La cantidad maxima de registros iterados va a ser Batch_Size x Batch_Quantity.</inlineHelpText>
    <label>Batch Quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>