force-app/main/default/objects/BatchToTriggerFlow_Query__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>Tamaño de los batches. Puede ser hasta una maximo de 50M.

La cantidad maxima de registros iterados va a ser Batch_Size x Batch_Quantity.</description>
    <inlineHelpText>Tamaño de los batches. Puede ser hasta una maximo de 50M.

La cantidad maxima de registros iterados va a ser Batch_Size x Batch_Quantity.</inlineHelpText>
    <label>Batch Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>