force-app/main/default/objects/BatchToTriggerFlow_Query__mdt/fields/ConfigToUse__c.field-meta.xml
<CustomField>
    <fullName>ConfigToUse__c</fullName>
    <description>El campo define que configuracion va a usar el batch cuando se ejectue. Puede tener 3 valores:
 - TEST: para poder realizar los test. NO BORRAR NI MODIFICAR EL REGISTRO MARCADO COMO TEST. Solo puede existir un registro marcado como TEST.
 - ACTIVO: la configuracion con la cual se ejecutar el batch. Solo puede existir un registro marcado como ACTIVO.
 - Si valor: las configuraciones que no se esten usando se pueden dejar &quot;apagadas&quot; borrando el valor del campo.</description>
    <inlineHelpText>Valores permitidos:
 - TEST
 - ACTIVO
 - en blanco</inlineHelpText>
    <label>ConfigToUse</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>