force-app/main/default/objects/BatchToTriggerFlow_Query__mdt/fields/FlagField__c.field-meta.xml
<CustomField>
    <fullName>FlagField__c</fullName>
    <description>El api name del campo el cual el batch debe swtchear de valor. El campo debe ser de tipo booleano.</description>
    <label>FlagField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>