force-app/main/default/objects/BatchToTriggerFlow_Query__mdt/fields/FROM_statement__c.field-meta.xml
<CustomField>
    <fullName>FROM_statement__c</fullName>
    <description>FROM statement para la query que define los registros a recorrer. Define el objeto sobre el que se realizara la query. Se deben utilizar el api name de los objetos.</description>
    <inlineHelpText>FROM statement para la query que define los registros a recorrer. Define el objeto sobre el que se realizara la query. Se deben utilizar el api name de los objetos.</inlineHelpText>
    <label>FROM statement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>