force-app/main/default/objects/BatchToTriggerFlow_Query__mdt/fields/WHERE_statement__c.field-meta.xml
<CustomField>
    <fullName>WHERE_statement__c</fullName>
    <description>WHERE statement para la query que define los registros a recorrer. Se debe verificar que los campos existan en el objeto definido en el FROM statement. Se deben utilizar los api names de los campos.</description>
    <inlineHelpText>WHERE statement para la query que define los registros a recorrer. Se debe verificar que los campos existan en el objeto definido en el FROM statement. Se deben utilizar los api names de los campos.</inlineHelpText>
    <label>WHERE statement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>