force-app/main/default/objects/BatchToTriggerFlow_Query__mdt/validationRules/ConfigToUseLimits.validationRule-meta.xml
<ValidationRule>
    <fullName>ConfigToUseLimits</fullName>
    <active>true</active>
    <description>Verifica que el valor cargado en ConfigToUse sea ACTIVO, TEST, o en blanco</description>
    <errorConditionFormula>AND(
 AND(
 ConfigToUse__c != &quot;ACTIVO&quot;,
 ConfigToUse__c != &quot;TEST&quot;
 ),
 NOT(ISBLANK(ConfigToUse__c))
)</errorConditionFormula>
    <errorMessage>El valor cargado en ConfigToUse debe ser ACTIVO, TEST, o dejarse el campo en blanco.</errorMessage>
</ValidationRule>